Project-1/Deployment copy.yml
apiVersion: v1
kind: Deployment
metadata:
  name: user-service-deployment
  label:
    app: backend-user-service
spec:
  replicas: 2
  resource:
    request:
      cpu: 250m
      memory: 100 mb
    limit:
      cpu: 500m
      memory: 100mb
  containers:
    - name: user-service-container
      image: user-service:latest
