Project-1/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: dev
  labels:
    app: backend-user-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-user-service

  template:
    metadata:
      labels:
        app: backend-user-service

    spec:
      containers:
        - name: user-service-container
          image: user-service:latest
          imagePullPolicy: Never

          resources:
            requests:
              cpu: "250m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "100Mi"
