Project-1/Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  namespace: dev
  labels:
    app: backend
spec:
  resource:
    request: 500m cpu
    limit: 1cpu
    resourceMemory: 200mb
    resourceMemorylimit: 500mb

  containers:
    - name: user-service-local
      image: user-service:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 4000
