Project-1/Service.yml
# Update your service
apiVersion: v1
kind: Service
metadata:
  name: user-pod-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: backend-user-service
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 30080
