Project-1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: user-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-pod-service # Changed from user-service
                port:
                  number: 80 # Changed from 4000
